@startuml

title __AUTH's Class Diagram__\n

  namespace br.com.alg.trufflesapi {
    namespace jwt.security {
      namespace auth {
        class br.com.alg.trufflesapi.jwt.security.auth.RestAuthenticationEntryPoint {
            + commence()
        }
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace jwt.security {
      namespace auth {
        class br.com.alg.trufflesapi.jwt.security.auth.TokenAuthenticationFilter {
            - logger : Log
            - userDetailsService : UserDetailsService
            + TokenAuthenticationFilter()
            + doFilterInternal()
        }
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace jwt.security {
      namespace auth {
        class br.com.alg.trufflesapi.jwt.security.auth.TokenBasedAuthentication {
            - principle : UserDetails
            {static} - serialVersionUID : long
            - token : String
            + TokenBasedAuthentication()
            + getCredentials()
            + getPrincipal()
            + getToken()
            + isAuthenticated()
            + setToken()
        }
      }
    }
  }
  

  br.com.alg.trufflesapi.jwt.security.auth.RestAuthenticationEntryPoint .up.|> org.springframework.security.web.AuthenticationEntryPoint
  br.com.alg.trufflesapi.jwt.security.auth.TokenAuthenticationFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  br.com.alg.trufflesapi.jwt.security.auth.TokenAuthenticationFilter o-- br.com.alg.trufflesapi.jwt.security.TokenHelper : tokenHelper
  br.com.alg.trufflesapi.jwt.security.auth.TokenBasedAuthentication -up-|> org.springframework.security.authentication.AbstractAuthenticationToken


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
